@@ -12,7 +12,7 @@ Changes from 5.0.1 to 5.1.0
 
 2. A number of memory leak issues have been fixed.
 
-3. Infrastructure upgrades: Bison 3.5.3, Texinfo 6.7, Gettext 0.20.1,
+3. Infrastructure upgrades: Bison 3.5.4, Texinfo 6.7, Gettext 0.20.1,
    Automake 1.16.2.
 
 4. The indexing in the manual has been thoroughly revised, in particular
