@@ -7,6 +7,11 @@
 	luciole75w <luciole75w@gmail.com> for the bug report.
 	(set_FPAT): Use global save_FPAT instead of local save_fpat.
 
+	Unrelated:
+
+	* awkgram.c, command.c: Rebuild with Bison 3.5.4.
+	* NEWS: Updated.
+
 2020-04-02         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* field.c (re_parse_field): If default parsing and trailing
